# telchar

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  registry-backend.yml  registry-frontend.yml  release.yml  validate.yml
backend/: .gitignore  Cargo.toml
backend/src/schema/: mod.rs
backend/src/schema/dapp/: inputs.rs  mod.rs  query.rs
backend/src/schema/scope/: mod.rs  query.rs
backend/src/schema/team/: mod.rs  query.rs
bootstrap/backend/: deployment.tf  ingress.tf  main.tf
bootstrap/docs/: deployment.tf  main.tf  service.tf
bootstrap/frontend/: deployment.tf  ingress.tf  main.tf
bootstrap/registry/: cert.tf  configmap.tf  deployment.tf  main.tf  monitor.tf  output.tf  rbac.tf  secret.tf  service.tf  storage.tf
cli/: .env  .env.example  Cargo.toml  build.rs  dist-workspace.toml  schema.graphql
cli/src/: main.rs
cli/src/command/: codegen.rs  codegen_local.rs  install.rs  mod.rs  publish.rs
codegen/: Cargo.toml
codegen/examples/: README.md  package-lock.json  package.json
codegen/examples/types/: blaze_githoney_contract.ts  blaze_jpg_store_marketplace.ts  blaze_txpipe_asteria.ts  githoney_contract.ts  lucid-evolution_githoney_contract.ts  lucid-evolution_jpg_store_marketplace.ts  lucid-evolution_txpipe_asteria.ts  mesh_txpipe_asteria.ts
codegen/src/: blueprint.rs  lib.rs  schema.rs  template.rs
codegen/src/template/: blaze.rs  mod.rs
codegen/templates/: blaze.hbs  blaze_cardano.hbs  lucid-evolution.hbs
docker/: Dockerfile.docs  Dockerfile.registry-backend  Dockerfile.registry-frontend
docs/: .gitignore  package.json  pnpm-lock.yaml
docs/app/: _meta.tsx  layout.tsx  page.mdx
docs/app/backend/: _meta.tsx  page.mdx
docs/app/backend/example/: page.mdx
docs/app/backend/schema/: page.mdx
docs/app/cli/: _meta.tsx  page.mdx
docs/app/cli/commands/: page.mdx
docs/app/cli/commands/codegen/: page.mdx
docs/app/cli/commands/publish/: page.mdx
docs/app/cli/get-started/: page.mdx
docs/app/cli/installation/: page.mdx
docs/app/codegen/: _meta.tsx  page.mdx
docs/app/codegen/api/: page.mdx
docs/app/codegen/usage/: page.mdx
docs/app/oci/: page.mdx
landing/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
landing/app/: app.css  root.tsx
landing/app/components/: Footer.tsx  Header.tsx
landing/app/components/icons/: menu-grid.tsx
landing/app/pages/home/: index.tsx
landing/app/routes/: _index.tsx
registry/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
registry/backend/src/: main.rs  oci.rs
registry/backend/src/schema/: mod.rs
registry/backend/src/schema/dapp/: json.rs  mod.rs  query.rs
registry/backend/src/schema/pagination/: mod.rs
registry/data/: ctf_hello_world.json  ctf_sell_nft.json  ctf_vesting.json  data.json  githoney_contract.json
registry/frontend/: .env.example  .graphqlrc.yml  Dockerfile  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  schema.graphql  server.js  tailwind.config.ts  tsconfig.json  tsconfig.vite.json  vite-env.d.ts  vite.config.ts
registry/frontend/@types/: graphql.d.ts
registry/frontend/app/: app.css  root.tsx  routes.ts
registry/frontend/app/components/: ExpandableCell.tsx  Footer.tsx  Header.tsx  Hero.tsx  SearchBar.tsx  TabName.tsx  ToTopButton.tsx
registry/frontend/app/components/icons/: arrow-left.tsx  arrow-right.tsx  chevron-down-bold.tsx  chevron-down.tsx  chevron-left.tsx  chevron-right.tsx  copy.tsx  deployment.tsx  document.tsx  import.tsx  info.tsx  mac.tsx  search.tsx  times.tsx
registry/frontend/app/components/ui/: Button.tsx  Card.tsx  Dropdown.tsx
registry/frontend/app/gql/dapps/: dapps.query.ts
registry/frontend/app/hooks/: useFetcherWithReset.ts
registry/frontend/app/pages/dapp/details/: index.tsx  info.tsx
registry/frontend/app/pages/dapp/details/tab/: readme.tsx
registry/frontend/app/pages/dapp/details/tab/blueprint/: SchemaInfo.tsx  ValidatorInfo.tsx  index.tsx
registry/frontend/app/pages/home/: catalogue.tsx  index.tsx
registry/frontend/app/routes/: _index.tsx  api.search.tsx  dapp.$scope.$name.raw.plutus[.]json.tsx  dapp.$scope.$name.tsx
registry/frontend/app/routes/dapp/: details.tsx
registry/frontend/server/: query.ts
registry/zot/: README.md  config.json  docker-compose.amd.yml  docker-compose.arm.yml
registry/zot/seed/: Cargo.toml  README.md  main.rs
src/: blueprint.rs  main.rs
web/: Dockerfile  codegen.ts  package.json  pnpm-lock.yaml  schema.graphql  tailwind.config.ts  tsconfig.node.json  vite.config.ts
web/@types/: graphql.d.ts
web/app/: app.css  root.tsx
web/app/components/: Footer.tsx  Header.tsx  Hero.tsx  SearchBar.tsx  TabName.tsx
web/app/components/icons/: document.tsx  git.tsx
web/app/components/ui/: Button.tsx  Card.tsx
web/app/gql/: gql.server.ts
web/app/gql/dapps/: dapps.query.ts
web/app/pages/dapp/details/: index.tsx
web/app/pages/dapp/details/tab/: blueprint.tsx  deployment.tsx  readme.tsx
web/app/pages/home/: catalogue.tsx  index.tsx
web/app/routes/: home.tsx
web/server/: app.ts
