[package]
name = "telchar-cli"
description = "A toolchain that improves the developer experience of integrating Plutus validators in off-chain processes"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/txpipe/telchar"
homepage = "https://registry.telchar.txpipe.io"
documentation = "https://telchar.txpipe.io"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cynic = { version = "3", features = ["http-surf"] }
surf = "2"
tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15"

[build-dependencies]
cynic-codegen = { version = "3" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
