[package]
name = "telchar"
description = "A toolchain that improves the developer experience of integrating Plutus validators in off-chain processes"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/txpipe/telchar"
homepage = "https://registry.telchar.txpipe.io"
documentation = "https://telchar.txpipe.io"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cynic = { version = "3", features = ["http-surf"] }
surf = "2"
tokio = { version = "1.43.0", features = ["full"] }
dialoguer = "0.11.0"
console = "0.15.10"
oci-client = "0.14.0"
chrono = "0.4.39"
dotenv_codegen = "0.15.0"
telchar-codegen = { version = "0.1.1", path = "../codegen" }

[build-dependencies]
cynic-codegen = { version = "3" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
