[package]
name = "telchar-codegen"
description = "A toolchain that improves the developer experience of integrating Plutus validators in off-chain processes"
license = "Apache-2.0"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/txpipe/telchar"
homepage = "https://registry.telchar.txpipe.io"
documentation = "https://telchar.txpipe.io"
readme = "../README.md"

[dependencies]
handlebars = "6.0.0"
heck = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
