[package]
name = "telchar-registry-backend"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/txpipe/telchar"
homepage = "https://registry.telchar.txpipe.io"
documentation = "https://telchar.txpipe.io"

[dependencies]
async-graphql = "7.0.13"
async-graphql-rocket = "7.0.13"
chrono = "0.4.39"
dotenvy = "0.15.7"
oci-client = "0.14.0"
reqwest = { version = "0.12.12", features = ["json"] }
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
telchar-codegen = { version = "0.1.1", path = "../../codegen" }
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
