[package]
name = "zot_seed"
version = "0.1.0"
edition = "2021"

[dependencies]
oci-client = "0.14.0"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
telchar-codegen = { version = "0.1.0", path = "../../../codegen" }
chrono = "0.4.39"

[[bin]]
name = "zot_seed"
path = "main.rs"
